Turns on  Mach_Heroc

--- a/.config
+++ b/.config
@@ -213,7 +213,7 @@ CONFIG_MSM_DEBUG_UART3=y
 # CONFIG_MACH_SAPPHIRE is not set
 CONFIG_MACH_HERO=y
 # CONFIG_MACH_DESIREC is not set
-# CONFIG_MACH_HEROC is not set
+CONFIG_MACH_HEROC=y
 # CONFIG_TROUT_BATTCHG is not set
 CONFIG_HTC_BATTCHG=y
 CONFIG_HTC_BATTCHG_SMEM=y
